feat: store conversations
